--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,23 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  .col-md-12(role="main")
+    ul.list-group
+      each value, index in timeLine
+          // start item
+          li.list-group-item
+            .media
+              a.media-left(href="#")
+                img(src=value.owner.avatarUrl width="64px" height="64px")
+              .media-body
+                h4.media-heading
+                  a(href="/item/" + value.id)= value.title
+                .text-muted
+                  each tagName, tagIndex in value.tags
+                      span.label.label-default= tagName
+                .text
+                    span.text(style="margin-right:5px")
+                      small= value.createdAt +" "+ value.owner.loginId
+                    span.text
+                      small.glyphicon.glyphicon-star(area-hidden="true")= "x" + value.likeCount
+          // end item
