implements find item

--- a/views/index.jade
+++ b/views/index.jade
@@ -17,7 +17,7 @@ block content
                       span.label.label-default= tagName
                 .text
                     span.text(style="margin-right:5px")
-                      small= value.createdAt +" "+ value.owner.loginId
+                      small= value.createAt +" "+ value.owner.loginId
                     span.text
                       small.glyphicon.glyphicon-star(area-hidden="true")= "x" + value.likeCount
           // end item
