--- a/views/include/menu.jade
+++ b/views/include/menu.jade
@@ -8,7 +8,7 @@ nav.navbar.navbar-default(role="navigation")
           span.icon-bar
           span.icon-bar
           span.icon-bar
-      a.navbar-brand(href="#")
+      a.navbar-brand(href="/")
         | きいて
     .collapse.navbar-collapse#bs-example-navbar-collapse-1
       form.navbar-form.navbar-left(role="search")
