--- a/views/item/show.jade
+++ b/views/item/show.jade
@@ -15,10 +15,14 @@ block content
     strong コメント一覧
     #reply-detail
   hr
-  .reply
-    .form-group
-      textarea(rows=5, placeholder='コメントを入力して下さい')#reply-body.form-control.span6
-      button#register.btn.btn-success 投稿する
+  if user
+    .reply
+      .form-group
+        textarea(rows=5, placeholder='コメントを入力して下さい')#reply-body.form-control.span6
+        button#register.btn.btn-success 投稿する
+  else
+    .reply
+      | コメントするにはログインしてね
 
   script.
     $(function () {
@@ -26,7 +30,7 @@ block content
         type: 'GET',
         url: '/items/reply/list',
         data: 'itemId=#{item.id}',
-        success: function(data, textStatus, jqXHR){
+        success: function (data, textStatus, jqXHR) {
           console.log(data);
           var template = '';
           for (var i = 0; i < data.length; i++) {
@@ -38,31 +42,35 @@ block content
           }
           $('#reply-detail').html(template);
         },
-        error: function(data){
+        error: function (data) {
           console.error(data);
         }
       });
-      $('#register').click(function (e) {
-        e.preventDefault();
-        var body = $('#reply-body').val();
-        var data = {
-          itemId: '#{item.id}',
-          body: body
-        };
-        $.ajax({
-          type: 'POST',
-          url: '/items/reply',
-          contentType: 'application/json',
-          data: JSON.stringify(data),
-          success: function (data, textStatus, jqXHR) {
-            $('#reply-body').val('');
-            var template = '<div class="panel panel-default"><div class="panel-body">' +
-              '<img src="#{user.avatarUrl}" width="32px" height="32px"> #{user.loginId} wrote <br>' + body + '</div></div>';
-            $('#reply-detail').prepend(template);
-          },
-          error: function (data) {
-            console.error(data);
-          }
+    });
+  if user
+    script.
+      $(function () {
+        $('#register').click(function (e) {
+          e.preventDefault();
+          var body = $('#reply-body').val();
+          var data = {
+            itemId: '#{item.id}',
+            body: body
+          };
+          $.ajax({
+            type: 'POST',
+            url: '/items/reply',
+            contentType: 'application/json',
+            data: JSON.stringify(data),
+            success: function (data, textStatus, jqXHR) {
+              $('#reply-body').val('');
+              var template = '<div class="panel panel-default"><div class="panel-body">' +
+                '<img src="#{user.avatarUrl}" width="32px" height="32px"> #{user.loginId} wrote <br>' + body + '</div></div>';
+              $('#reply-detail').prepend(template);
+            },
+            error: function (data) {
+              console.error(data);
+            }
+          });
         });
       });
-    });
